@@ -72,6 +72,7 @@ static const IdStrMap img_tags[] = {
     { CODEC_ID_SUNRAST   , "im24"},
     { CODEC_ID_SUNRAST   , "sunras"},
     { CODEC_ID_JPEG2000  , "jp2"},
+    { CODEC_ID_DPX       , "dpx"},
     { CODEC_ID_NONE      , NULL}
 };
 
